# diligence-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  analyze.py  diligence  launch_report_viewer.py  pyproject.toml  pytest.ini  report.md  requirements-test.txt  run.py  run_and_monitor.sh  run_organizer_workflow.py  run_tests.sh  setup_google_auth.py  test_google_auth.py
docs/: BUSINESS_GUIDE.md  GOOGLE_OAUTH_SETUP.md  README.md
input_sources/: README.md  baseten.json  tensorstax.json
src/diligence_agent/: __main__.py  agents.py  crew.py  flow.py  generate_tasks_yaml.py  input_reader.py  main.py  mcp_config.py  non_research_flow.py  output_formatter.py  progress_reporter.py  report_viewer.py  research_flow.py  schemas.py  ui.py  utils.py  workflow.py
src/diligence_agent/config/: agents.yaml  tasks.yaml
src/diligence_agent/tools/: cached_serper_tools.py  google_doc_processor.py  sentiment_analyzer.py  simple_auth_helper.py
task_outputs/: organized_data.json  quality_check.json
tests/: README.md  __init__.py  conftest.py  test_google_doc_processor.py  test_input_reader.py  test_main.py  test_progress_reporter.py  test_sentiment.py  test_slack_integration.py
tests/fixtures/: sample_company.json
