[project]
name = "diligence_agent"
version = "0.1.0"
description = "diligence-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai-tools>=0.62.0",
    "crewai[tools]>=0.159.0,<1.0.0",
    "opik>=1.8.27",
    "requests>=2.32.0",
    "pytest>=8.0.0",
    "gradio>=4.0.0",
]

[project.scripts]
diligence_agent = "diligence_agent.main:run"
ui = "diligence_agent.ui:launch_ui"
run_crew = "diligence_agent.main:run"
train = "diligence_agent.main:train"
replay = "diligence_agent.main:replay"
test = "diligence_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
